# JxMake

./: .gitignore  CHANGELOG.md  HISTORY  LICENSE  Makefile  README  README.md  SF-GH.txt  TODO
3rd_party_library_licenses/: LICENSE_1BSD.txt  LICENSE_2BSD.txt  LICENSE_3BSD.txt  LICENSE_ISC.txt
docs/html/en_US/: Script-Editor-Keyboard-Shortcuts.html
docs/html/image/: 0-source-modifier-keys.odg  0-source-modifier-keys.xcf
docs/txt/en_US/: 00-System-Configuration.txt  01-Introduction.txt  02-Defining-Strings.txt  03-Defining-Dependency-List.txt  04-Defining-Variables.txt  05-Special-Variables.txt  06-Regular-Expression-In-Variable.txt  07-Built-In-Functions.txt  08-User-Defined-Function.txt  09-Targets.txt  10-Flow-Control.txt  11-Loop.txt  12-Numerical-Operations.txt  13-Loadable-Libraries.txt  14-Simple-Programmer-Hardware.txt  99-Appendix-A_AVR-and-SAM-Programming-Header.txt  99-Appendix-B_RPi-Pico-SWD-Header.txt  99-Appendix-C_STM8-STM32-Programming-Header.txt  99-Appendix-X_Built-In-Function-Parameters.txt
hardware/: 1200bps_Touch.py  ELECTRONIC_COMPONENT_TOLERANCE.txt  JxMake_USB_GPIO-Protocol_Manual.txt  LUFA_DualVirtualSerial.inf  _KiCad8_Common_fp-info-cache
hardware/JxMake_USB_GPIO/: Bootloader_LUFA-111009_Caterina_ATmega32U4_16MHz.hex  Firmware-JxMakeUSBGPPIO.hex  README_VID-PID.txt
hardware/JxMake_USB_GPIO/Bootloader/: Caterina.h  Makefile
hardware/JxMake_USB_GPIO/Firmware/: ActivityLED.h  BufferSize.h  Descriptors.c  Descriptors.h  IOPairParser.h  Makefile  (+7 more)
hardware/Test_Firmware/: README.txt
hardware/Test_Firmware/FW_PICO/RP2350/: CMakeLists.txt  main.c  prebuilt-firmware.dis  prebuilt-firmware.map  prebuilt-firmware.uf2
hardware/Tools/Firmware/Serial_WiFi_Bridge/PicoW/: CMakeLists.txt  Connection_Diagram.txt  README_VID-PID.txt  bootstrap.sh  clean.sh
hardware/Tools/Firmware/Serial_WiFi_Bridge/PicoW/src/: led.c  led.h  lwipopts.h  main.c  ring_buffer.c  ring_buffer.h  tusb_config.h  usb_descriptors.c  util.c  util.h
keys/: README  public.key
shf/: kate_jxMake.xml
src/: ATest1.java  GTest1.java  GTest2.java  JXM_Main.java  Makefile  PTest1B.java  PTest1X.java  PTest2B.java  PTest2X.java  PTest3X.java  PTestF.java  jxmake.bat  jxmake.sh  manifest_JXM_Main.txt
src/1-TestData/: ANSI_Seq_Test1.txt  ANSI_Seq_Test2.txt  GTest1.GUI.xml  PTest1B.Blink-ATmega2560.ino.hex  PTest1B.Blink-ATmega328P.ino.hex  PTest1B.Blink-ATmega8A.c.hex  PTest1B.VUARTLoopback-ATmega32U4.hex  PTest1X.Blink-AT89S8253.cpp.hex  PTest1X.Blink-ATmega328P.cpp.hex  PTest1X.Blink-ATmega328P.ino.hex  PTest1X.Blink-ATmega32A.cpp.hex  PTest1X.Blink-ATmega32A.cpp.pgload.svf  PTest1X.Blink-ATmega32A.cpp.serial.svf  PTest1X.Blink-ATmega32A.sig.svf  PTest1X.Blink-ATmega4808.cpp.hex  PTest1X.Blink-ATtiny10.cpp.hex  PTest1X.Blink-ATtiny13-Minimal.cpp.hex  PTest1X.Blink-ATtiny3226.cpp.hex  PTest1X.Blink-AVR128DA.cpp.hex  PTest1X.Blink-AVR32DU.cpp.hex  PTest1X.Blink-AVR32EA.cpp.hex  PTest1X.Blink-AVR32SD.cpp.hex  PTest1X.Blink-LGT8F328P.ino.hex  PTest2X.Blink-ATSAM3X8E.cpp.hex  PTest2X.Blink-ATSAMD21G18A.cpp.hex  PTest2X.Blink-NRF51822.cpp.hex  PTest2X.Blink-RP2350-SDK200-CMake.m33.c.hex  PTest2X.Blink-STM32F103C8T6-Ofs8k-VBC.cpp.hex  PTest2X.Blink-STM32F103C8T6-Ofs8k-VTO.cpp.hex  PTest2X.Blink-STM32F103C8T6.cpp.hex  PTest2X.Blink-STM32F411CEU6.cpp.hex  PTest2X.Blink-STM32G070RBT6.ino.hex  PTest2X.Blink-STM32G431CBT6.ino.hex  PTest2X.Blink-STM32H750VBT6.cpp.hex  PTest2X.Blink-STM32H750VBT6.exf.hex  PTest2X.Blink-STM32L011D4P6.ino.hex  PTest2X.Blink-STM32L151C8T6.c.hex  PTest2X.Blink-STM32L431C8T6.ino.hex  PTest2X.Blink-STM32WLE5JC.ino.hex  PTest2X.Blink-STM8L151K4T6.cpp.hex  (+31 more)
src/com/: README-com.fazecast.jSerialComm.txt  README-com.intellectualsites.http.txt  README-com.j256.simplemagic.txt  intellectualsites-agent.diff  j256-agent.diff
src/jxm/: ArgParser.java  BSEList.java  Bytes.java  DocBrowser.java  FWCList.java  InfixToPostfix.java  JXMAsmError.java  JXMException.java  JXMFatalInitError.java  JXMFatalLogicError.java  JXMRuntimeError.java  JxMake.java  MapList.java  MenuSpec.java  MultiHashMap.java  MultiTreeMap.java  ScriptEditor.java  SerialConsole.java  SerialPortUtil.java  SerializableDeepClone.java  SpecReader.java  StackList.java  SysUtil.java  Texts.java  TokenReader.java  WindowsDriverInstaller.java  XBBuilder.java  XBExec.java  XBStack.java  XMLFrame.java
src/org/: README-org.fusesource.jansi.txt  README-org.itadaki.bzip2.txt  README-org.kamranzafar.jtar.txt  README-org.tukaani.xz.txt
test/: ALOTest.jxm  BSETest.jxm  CacheTest.jxm  CmdTest.jxm  DeprTest.jxm  EmptyTest.jxm  FWCTest.jxm  ForTest.jxm  FunSupTest.jxm  FunTest.jxm  IfTest.jxm  IncTest_Main.jxm  IncTest_Print.jxm  IncTest_Println.jxm  JxMakeScriptEditor_Test.jxm  JxMakeScriptEditor_Test_A.jxm  JxMakeScriptEditor_Test_B.jxm  JxMakeScriptEditor_Test_B1.jxm  JxMakeScriptEditor_Test_B2.jxm  JxMakeScriptEditor_Test_B21.jxm  JxMakeScriptEditor_Test_B22.jxm  JxMakeScriptEditor_Test_B3.jxm  JxMakeScriptEditor_Test_C.jxm  JxMakeScriptEditor_Test_X.jxm  JxMakeTokenMaker_Test.jxm  LabelGotoTest.jxm  LocalTest.jxm  LoopTest.jxm  MCUProgExec-ATmega328P.jxm  MCUProgExec-ATmega32A_JTAG.jxm  MCUProgExec-BootLUFAPrinter.jxm  MCUProgExec-BootOpenBLT.jxm  MCUProgExec-LGT8F328P.jxm  MCUProgExec-PIC18F4520.jxm  MCUProgExec-PIC24FJ64GB002.jxm  MCUProgExec-STM8S103.jxm  MacroTest.jxm  MapTest.jxm  ParseTest.jxm  README.txt  (+14 more)
test/1-tarinpdir/: file1.txt  file2.txt
test/2-fwctestdata/: e-atmega.elf  e-atmega.hex  e-attiny0.elf  e-atxmega.elf  e-atxmega.hex  e-nrf51.elf  e-nrf52.elf  e-nrf52.hex  e-sam3x8.elf  e-samd21.elf  l.hex  s1.hex  s2.1.mot  s2.3.mot  u.tek  v1.asc  v1.mem  v1.mos  w.tix  x.asc  x.bin.ext.tek  x.hex  x.hex.ext.tek  x.mem  y.hex  z.hex
test/src/cpp_rp2040/: CMakeLists.txt  JxMakeFile  main.cpp
test/src/cpp_rp2040/bt/: bt.c  bt.h
test/src/cpp_rp2040/gatt/: dummy_temp.gatt
test/src/cpp_rp2040/pio/: blink.pio
test/src/cpp_rp2040/ulib/: src1.cpp  src2.cpp
test/src/cpp_rp2040/wifi/: dnsserver.c
util/DictBuilder/: Makefile
util/STM32Spec/: STM32ChipSpec.jxm  STM32ChipSpecList.txt  STM32LinkerScript.jxm
(+1198 files in other folders)
